<?xml version="1.0"?>
<package format="3">
  <name>gas_mapping_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for gas sensor fusion and mapping.</description>

  <maintainer email="bedathenic@todo.todo">bedathenic</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
